
2017-12-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* config.def, parser.y: FR #158 added cb_perform_varying_without_by
	* parser.y: FR #168 adding missing compile time checks for
	  PERFORM BY ZERO

2017-12-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: FR 259 delete temporary files as soon as possible:
	  moved cleanup of intermediates for a single processed file
	  from (cobc_clean_up) to (clean_up_intermediates) and call this in
	  main after processing the single file
	* parser.y, typeck.c: fixed some errors spotted by COB_TREE_DEBUG

2017-11-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.h, cobc.c (process_translate), codegen.c: local_filename with
	  additional attribute local_include_name as short name,
	  local_name containing the full name for file handling again

2017-11-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* error.c (undefined_error): always raise "not defined" error if
	  word is already qualified
	* parser.y, reserved.c, cobc.h: FR #265 added parsing for ACUCOBOL
	  graphical controls, control styles, control properties and rough
	  parsing of INQUIRE and MODIFY statements
	* tree.h, field.c (validate_pic, setup_parameters): set new attribute
	  pic->flag_is_calculated where picture wasn't originally specified
	  and don't check this pseudo PICTURE later.
	* tree.c, tree.h: disabled pic->real_digits as it is currently not
	  in use anywhere (just calculated in tree.c)	  

2017-11-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: moved aliases VALUES/ZEROES/ZEROS to default.conf

2017-11-25  Ron Norman <rjn@inglenet.com>

	Bug #175 fixed: LENGTH OF constants with grouped fields
	* typeck.c: make sure field has been verified for constant LENGTH
	* field.c: set pic.category for POINTER and ignore PIC for it later
	* field.c (setup_parameters): set PIC 9(17) for pointer in 64 bit mode

2017-11-23  Ron Norman <rjn@inglenet.com>
